# graph_builder

./: CMakeLists.txt  CMakeUserPresets.json  README.md  README.md.txt
include/: graph_builder.h  graph_struct.h
resources/: graph_builder.qrc
src/: graph_builder.cpp  graph_struct.cpp  main.cpp
ui/: graph_builder.ui
